--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <th>2017 estimate</th>
     </tr>
     <tr>
-      <td>Daniel</td>
-      <td>718-555-1212</td>
-      <td>Guacamole</td>
+      <td>New York</td>
+      <td>New York</td>
+      <td>8,622,698</td>
     </tr>
     <tr>
       <td>Rachel</td>
